fix overlapping 'empty fields' control button on mobile

--- a/src/views/Editor/index.scss
+++ b/src/views/Editor/index.scss
@@ -12,8 +12,8 @@
 
         .controls {
             position: absolute;
-            right: 10px;
-            bottom: 54px;
+            right: 16px;
+            bottom: 4px;
             display: inline-block;
         }
     }
